--- a/form.html
+++ b/form.html
@@ -34,6 +34,8 @@
 			</form>
 		</div>
 		<div class="output" style="padding-top:50px;text-align:center;">
-		</div>		
+		</div>
+
+		<script></script>		
 	</body>
 </html>
