--- a/form.html
+++ b/form.html
@@ -36,6 +36,6 @@
 		<div class="output" style="padding-top:50px;text-align:center;">
 		</div>
 
-		<script></script>		
+		<script src="index.js"></script>		
 	</body>
 </html>
