--- a/average.html
+++ b/average.html
@@ -50,6 +50,6 @@
 		<div id="output" style="padding-top:50px;text-align:center;"> 
 		</div>
 
-		<script src="index.js"></script>		
+		<script src="average.js"></script>		
 	</body>
 </html>
