edited function name for exercises

--- a/Week 3/userSignup.html
+++ b/Week 3/userSignup.html
@@ -42,7 +42,7 @@
 			  </div>
 			  <div class="form-group"> 
 			    <div class="col-sm-offset-2 col-sm-10">
-			      <button type="button" onclick="myFunction()" class="btn btn-default">Submit</button>
+			      <button type="button" onclick="signup()" class="btn btn-default">Submit</button>
 			    </div>
 			  </div>
 			</form>
