--- a/Week 5/addition.html
+++ b/Week 5/addition.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<div>
-			<form class="form-horizontal" style="padding-top:30px;">
+			<form class="form-horizontal col-sm-offset-4" style="padding-top:30px;">
 			  <div class="form-group">
 			    <div class="col-sm-6">
 			      <input type="text" class="form-control" id="inputA">
